--- a/app/views/pupils/new.html.erb
+++ b/app/views/pupils/new.html.erb
@@ -3,3 +3,19 @@
 <%= render 'form' %>
 
 <%= link_to 'Back', pupils_path %>
+
+<%= form_for :pupil, url: pupils_path do |f| %>
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
